--- a/leakcanary-watcher/build.gradle
+++ b/leakcanary-watcher/build.gradle
@@ -1,3 +1,5 @@
+apply plugin: 'maven'
+
 version rootProject.ext.VERSION_NAME
 group rootProject.ext.GROUP
 
@@ -41,5 +43,17 @@ task sourceJar(type: Jar) {
   from 'src/main/java'
 }
 
+uploadArchives {
+  repositories {
+    mavenDeployer {
+      pom {
+        groupId = 'com.squareup.leakcanary'
+        artifactId = 'leakcanary-watcher'
+        version = rootProject.ext.VERSION_NAME
+      }
+      repository(url: 'file://' + new File(System.getProperty('user.home'), '.m2/repository').absolutePath)
+    }
+  }
+}
+
 apply from: rootProject.file('gradle/checkstyle.gradle')
-apply from: rootProject.file('gradle/gradle-mvn-push.gradle')
